src/test/ui/error-codes/E0438.stderr
error[E0438]: const `BAR` is not a member of trait `Bar`
  --> $DIR/E0438.rs:15:5
   |
LL |     const BAR: bool = true; //~ ERROR E0438
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `Bar`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0438"
